# clickhousemcp

./: .env.example  .flake8  .gitignore  ARCHITECTURE.md  CHANGELOG.md  INSTALL.md  LICENSE  README.md  clean.sh  docker-compose.yml  pyproject.toml  run.sh  setup.sh
.github/workflows/: publish-pypi.yml  python-package.yml
agent/: __init__.py  clickhouse_agent.py  config.py  default_instruction.py  exceptions.py  history_processor.py  main.py
docker/: init.sql
examples/: example.py  example_0_11.py  example_api_key_override.py  example_config_default.py  example_error_handling.py  example_explicit.py  example_integration.py  example_message_history.py  example_message_history_simple.py  example_minimal.py  example_multi_query.py  example_stream.py  example_summarization_config.py  example_switch_provider.py  example_user_override.py
tests/: test_basic.py  test_integration.py
