[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clickhouse-mcp-agent"
version = "0.9.0"
description = "AI agent for ClickHouse database analysis via MCP"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Altuğ Ceylan", email = "altug.ceylan.yes@gmail.com"}
]
keywords = ["clickhouse", "mcp", "ai", "database", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai-slim[mcp,google,openai,anthropic,vertexai,groq,mistral,cohere]",
    "mcp-clickhouse",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "types-cachetools"
]
examples = [
    "jupyter",
    "ipython",
]

[project.urls]
Homepage = "https://github.com/AranNomante/clickhousemcp"
Repository = "https://github.com/AranNomante/clickhousemcp"
Issues = "https://github.com/AranNomante/clickhousemcp/issues"



[tool.setuptools.packages.find]
include = ["agent*"]

[tool.setuptools.package-data]
"agent" = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
